--- a/manual/User-Manual.tex
+++ b/manual/User-Manual.tex
@@ -54,7 +54,7 @@ May 2012}
 \tableofcontents
 
 \chapter{Introduction}
-The Frequency-Domain Robust Controller Design Toolbox is a tool for designing robust linearly parameterized controllers and, for SISO systems, rational controllers in the Nyquist diagram. It can be used to design linearly parameterized and SISO rational controllers of any order for parametric models or nonparametric models obtained for example by the identification toolbox of MATLAB. The robust controllers are designed in terms of $H_\infty$ performance or classical robustness margins such as the gain and phase margin, for single/multi-model, SISO/MIMO systems.  The toolbox also supports designing gain-scheduled controllers. 
+The Frequency-Domain Robust Controller Design Toolbox is a tool for designing robust linearly parameterized controllers and SISO rational controllers in the Nyquist diagram. It can be used to design controllers of any order for parametric models or nonparametric models obtained for example by the identification toolbox of MATLAB. The robust controllers are designed in terms of $H_\infty$ performance or classical robustness margins such as the gain and phase margin, for single/multi-model, SISO/MIMO systems.  The toolbox also supports designing gain-scheduled controllers. 
 
 In all of design cases, linear or convex optimization problems are solved. For linear and quadratic optimization the well-known \texttt{linprog} or \texttt{quadprog} (depending on the problem) commands of the Optimization toolbox of MATLAB are used. While convex optimization problems are formulated with YALMIP and can be solved with all available solvers (e.g. \texttt{sdpt3} is used as a default solver) . Many commands of the Control toolbox of MATLAB are used as well.
 
@@ -77,7 +77,15 @@ A linearly parameterized controller has the following form:
 \label{linparcon}
 \rho^T \phi(s)=[\rho_1 \: \: \rho_2 \: \: \ldots \:\: \rho_n]\times [\phi_1(s) \: \: \phi_2(s) \:\: \ldots \:\: \phi_n(s)]^T
 \end{equation}
-where $\rho_1$, $\rho_2$, $\ldots$, $\rho_n$ are controller parameters and $\phi_1(s)$, $\phi_2(s)$, $\ldots$, $\phi_n(s)$ are basis transfer functions. These transfer functions must be stable, i.e. with no right half plane poles. 
+where $\rho_1$, $\rho_2$, $\ldots$, $\rho_n$ are controller parameters and $\phi_1(s)$, $\phi_2(s)$, $\ldots$, $\phi_n(s)$ are basis transfer functions. These transfer functions must be stable, i.e. with no right half plane poles.
+
+For SISO systems, a rational controller with the following form can be defined:
+
+\begin{equation}
+    K(j\omega) = \frac{X(j\omega)}{Y(j\omega)} = \frac{\rho_x^T \phi (s)}{f(s) \ \rho_y^T \phi (s)}
+\end{equation}
+
+$\phi$ is a vector of Laguerre or generalized basis functions, described below, and $f(s)$ is a fixed part of the controller. $\rho_x$ and $\rho_y$ are vectors of controller parameters.
 
 \subsubsection{PID, PI, PD:}
 
@@ -131,14 +139,7 @@ In the toolbox, the eigenvalues of the A matrix (equivalent to the poles of the 
 
 A state space representation of any of the previous controller types (PID, Laguerre etc.) is possible by setting the eigenvalues of the A matrix accordingly.
 
-\subsubsection{Transfer function:}
-For SISO systems, a rational controller with the following form can be defined:
 
-\begin{equation}
-    K(j\omega) = \frac{X(j\omega)}{Y(j\omega)} = \frac{\phi(j\omega) \rho_x^T}{\phi(j\omega) [1 \ \rho_y]^T}
-\end{equation}
-
-$\phi$ is a vector of Laguerre or generalized basis functions, described above. 
 
 
 
@@ -374,7 +375,7 @@ The procedure of design comprises three steps. First the type (or structure) of 
 \section{Determining controller structure}
 The first step of design is determining the desired controller type. By defining the controller type in fact the vector of basis transfer functions $\phi$ is specified. In the following command the controller type and subsequently the vector $\phi$ are specified by the user.
 \begin{lstlisting}
-phi = conphi (ConType , ConPar , CorD , F, ConStruc, ConOpt) 
+phi = conphi (ConType , ConPar , CorD , F, ConStruc) 
 \end{lstlisting}
 %\begin{table}
 %\centering
@@ -432,9 +433,8 @@ For continuous-time  Laguerre basis function, {\tt ConPar} is $[\xi \quad n]$ wh
 
 \item[\texttt{F}] is a transfer function by which the vector $\phi$ is multiplied. For example one can multiply a factor of integral $\frac{1}{s}$ to PID basis functions to get: $\phi=\frac{1}{s} \times [1\:\: \frac{1}{s} \:\: \frac{s}{1+\tau s}]^T$.
 
-\item[\texttt{ConStruc}] is either \texttt{'LP'} for a linearly parameterized controller (default) or \texttt{'SS'} for a state-space controller.
+\item[\texttt{ConStruc}] is either \texttt{'LP'} for a linearly parameterized controller (default) or \texttt{'TF'} for a transfer function (rational) controller.
 
-\item[\texttt{ConOpt}] for a state space controller is a cell containing a string \texttt{'B'} or \texttt{'C'} and the desired B or C matrix of the controller. By default, C = [1 0 0 0 ...].
     
 
 \end{description}
@@ -543,80 +543,47 @@ Transfer function from input to output...
       s^2 + 2 s + 1
   \end{lstlisting}
 
-  \subsection{Example 6} A continuous time PID controller defined in state space
+  \subsection{Example 6} A continuous-time 4th order Laguerre basis with $\xi=20$ in a transfer function structure, with an integrator (phi.fs is the inverse of the fixed part of the controller)
 
-\begin{lstlisting}
-tau = 0.1;
-phi = conphi('PID',tau,'s',[],'SS');
+  \begin{lstlisting}
+s = tf('s'); xi = 20; n = 4;
+phi = conphi('Lag',[xi n],'s',1/s,'tf');
+
 
 phi.phi
 
+ans =
  
-From input to output...
-     1
-1:  -
-     s
- 
-        1
-2:  --------
-     s (s+10)
- 
-3:  1
-
-
-phi.par.A
-
-         0    1.0000
-         0  -10.0000
-
-
-phi.par.C
-
-     1     0
-         
-\end{lstlisting}
-
-
-\subsection{Example 7} A discrete time Laguerre controller defined in state space with the B matrix given
-
-\begin{lstlisting}
-Ts = 0.02; n = 4;
-z = tf('z');
-
-phi = conphi('Laguerre',[Ts 0.1 n],'z',[],'SS',{'B',[1 0; 1 0; 0 1; 0 1]});
-
-
-phi
-
-	[1x1 struct]    [1x1 struct]
-
-    
-phi{1}.phi
-    
   From input to output...
-       (z-0.2048) (z^2 - 0.1952z + 0.02002)
-   1:  ------------------------------------
-                    (z-0.1)^4
+   1:  1
  
-       (z+1) (z^2 - 0.4z + 0.06)
-   2:  -------------------------
-               (z-0.1)^4
+       6.3246
+   2:  ------
+       (s+20)
  
-       (z-0.4) (z+1)
+       6.3246 (s-20)
    3:  -------------
-         (z-0.1)^4
+         (s+20)^2
  
-         (z+1)
-   4:  ---------
-       (z-0.1)^4
+       6.3246 (s-20)^2
+   4:  ---------------
+          (s+20)^3
  
-   5:  1
+       6.3246 (s-20)^3
+   5:  ---------------
+          (s+20)^4
  
-Sample time: 0.02 seconds
-Discrete-time zero/pole/gain model.
+Continuous-time zero/pole/gain model.
 
+
+phi.fs
+
+ans =
+ 
+  s
+ 
+Continuous-time transfer function.
 \end{lstlisting}
-
 
 After defining our desired controller structure, we shall proceed to the next step: specifying performance characteristics.
 
@@ -645,7 +612,7 @@ per = conper (PerType , par , Ld)
 %\end{table}
 
 \begin{description}
-\item[\texttt{PerType}] is a string specifying the desired performance of the system. It can be \texttt{`GPhC'}, \texttt{`LS'} or \texttt{`Hinf'}. 
+\item[\texttt{PerType}] is a string specifying the desired performance of the system. It can be \texttt{`GPhC'}, \texttt{`LS'} or \texttt{`Hinf'}. For rational controllers (with \texttt{`TF'} structure), only \texttt{`Hinf'} can be used.
 
 \begin{description}
 \item{\texttt{`GPhC'}} 
@@ -660,7 +627,7 @@ stands for the case when one wants to determine desired values for gain margin, 
 
 
 \item{\texttt{`Hinf'}} In this method the distance between $L=GK$ and $L_d$ is minimized under 
-             some $H_\infty$ constraints on the weighted closed-loop sensitivity functions.
+             some $H_\infty$ constraints on the weighted closed-loop sensitivity functions. For rational controllers, $L_d$ is not used $\gamma$ is minimized. 
              
  \end{description}            
              
@@ -752,7 +719,7 @@ K = condes (G , phi , per , options)
 
 \begin{description}
 \item[\texttt{G}] is a cell, i. e., \texttt{G\{1\}}, \texttt{G\{2\}}, \dots, \texttt{G\{m\}} represent SISO or MIMO models $G_1$, $G_2$, $\ldots$, $G_m$. In case there is just one model, define it as \texttt{G\{1\}} or simply \texttt{G}.
-For a 'TF' (transfer function/rational) controller structure, G can be given as a cell of cells where $N{j}=G{j}{1}$ and $M{j}=G{j}{2}$. The j-th plant model is equal to $N{j} M{j}^{-1}$.
+    For a \texttt{`TF'} (transfer function/rational) controller structure, G can be given as a cell of cells where \texttt{N\{j\}=G\{j\}\{1\}} and \texttt{M\{j\}=G\{j\}\{2\}}. The j-th plant model is equal to \texttt{N\{j\} M\{j\}$^{-1}$}.
 Nonparametric models should be defined as an \texttt{frd} or  \texttt{idfrd} object (type \texttt{doc frd} to see details about creating or converting your model to an \texttt{frd} object).
 
 \item[\texttt{phi}] is the output of the first command. The command \texttt{condes} designs a controller of the specified type to meet the performance criteria implied by \texttt{per}. For MIMO systems \texttt{phi} is an $n_i \times n_o$ cell where $n_i$ is the number of inputs and $n_o$ is the number of outputs of the system. For example \texttt{phi\{p,q\}} is the vector of basis functions $\phi_{pq}$ for the element of row \texttt{p} and column \texttt{q} of the controller matrix $K$. So each element of the controller matrix may have a different vector of basis functions, or different structure. They should be defined separately by the first command, for example in a loop. Should you specify one controller type or structure for all the elements of the controller matrix, just simply enter one \texttt{phi} (not a cell) in the \texttt{condes} command. 
@@ -911,6 +878,35 @@ K=condes(G,phi,per)
 
 \end{lstlisting}
 
+
+\subsubsection{Rational controller design}
+Consider the following system:
+$G(z) = \frac{z-0.186}{z^3 - 1.116z^2 + 0.465 z - 0.093}$
+with sampling period $Ts = 1 s$. Compute a fourth-order stabilizing controller with an integrator that minimizes $\| W_1 S\|_\infty$, where
+$W_1(z) = \frac{0.4902 \left( z^2 - 1.0431 z + 0.3263\right)}{(z-1)(z-0.282)}$
+
+We proceed as follows:
+\begin{lstlisting}
+Ts = 1; n = 4; xi = 0;
+s = tf('s');
+z = tf('z',Ts);
+
+G = (z-0.186)/(z^3 - 1.116*z^2 + 0.465*z - 0.093);
+W{1} = 0.4902 *( z^2 - 1.0431* z + 0.3263)/((z-1)*(z-0.282));
+
+phi = conphi('Laguerre',[Ts xi n],'z',z/(z-1),'TF');
+per = conper('Hinf',W);
+opts = condesopt('gamma',[0.1 1 1e-3]);
+
+K = condes(G,phi,per,opts)
+
+  0.56039 z (z-0.5241) (z+0.215) (z^2 - 0.1235z + 0.3811)
+  -------------------------------------------------------
+   (z+0.4187) (z+0.8764) (z-1) (z^2 - 0.006408z + 0.365)
+ 
+\end{lstlisting}
+
+
 \section{Controller design options}
 
 The controller design options are defined by the following command:
@@ -973,6 +969,20 @@ parameters. The first one is described by a second-order polynomial and the seco
 \item[\texttt{gs :}] This option is used if a gain-scheduled controller should be designed. \texttt{gs} is a $m$ by $n$ matrix, where $n$ is the number 
 of scheduling parameters and $m$ the number of operating points. The $i$-th row of {\tt gs} contains the values of $n$ scheduling
 parameters that corresponds to the $i$-th model $G_i$. The default value of \texttt{gs} is \texttt{[]}.
+
+\item[\texttt{ntheta :}] This option is used for controllers with TF (transfer
+function) structure. It is an integer greater than 2 
+(default: 8) that determines the number of vertices used
+to approximate the circle that determines the performance
+constraints in the Nyquist diagram. If it is empty, the
+the circle will not be approximated and a convex constraint
+will be defined (YALMIP should therefore be used).
+
+
+\item[\texttt{TFtol :}] This option is used for controllers with TF (transfer
+function) structure. It should be a small, positive number.
+The linear constraints are of the form Ax <= 0 and are 
+replaced by Ax <= TFtol. Default: 1e-7.
 
  \item[{\tt yalmip :}]   is a string that can be set to {\tt `on'} to activate the YALMIP interface. It should be activated when  Gbands='on' for multivariable controller design of more than 2 inputs. It will be automatically activated if YALMIP has already been installed and {\tt nq} is empty. As  the default solver SDPT3 is used  but can be changed by 'solver' option, e.g. options=condesopt('yalmip','on','solver','sedumi').
 
