--- a/manual/User-Manual.tex
+++ b/manual/User-Manual.tex
@@ -54,11 +54,7 @@ May 2012}
 \tableofcontents
 
 \chapter{Introduction}
-<<<<<<< HEAD
-The Frequency-Domain Robust Controller Design Toolbox is a tool for designing robust linearly parameterized controllers and SISO rational controllers in the Nyquist diagram. It can be used to design controllers of any order for parametric models or nonparametric models obtained for example by the identification toolbox of MATLAB. The robust controllers are designed in terms of $H_\infty$ performance or classical robustness margins such as the gain and phase margin, for single/multi-model, SISO/MIMO systems.  The toolbox also supports designing gain-scheduled controllers. 
-=======
-The Frequency-Domain Robust Controller Design Toolbox is a tool for designing robust linearly parameterized controllers in the Nyquist diagram. It can be used to design linearly parameterized controllers of any order for parametric models or nonparametric models obtained for example by the identification toolbox of MATLAB. The robust controllers are designed in terms of $H_\infty$ performance or classical robustness margins such as the gain and phase margin, for single/multi-model, SISO/MIMO systems.  The toolbox also supports designing gain-scheduled controllers. 
->>>>>>> statespace
+The Frequency-Domain Robust Controller Design Toolbox is a tool for designing robust linearly parameterized controllers or SISO rational controllers in the Nyquist diagram. It can be used to design controllers of any order for parametric models or nonparametric models obtained for example by the identification toolbox of MATLAB. The robust controllers are designed in terms of $H_\infty$ performance or classical robustness margins such as the gain and phase margin, for single/multi-model, SISO/MIMO systems.  The toolbox also supports designing gain-scheduled controllers. 
 
 In all of design cases, linear or convex optimization problems are solved. For linear and quadratic optimization the well-known \texttt{linprog} or \texttt{quadprog} (depending on the problem) commands of the Optimization toolbox of MATLAB are used. While convex optimization problems are formulated with YALMIP and can be solved with all available solvers (e.g. \texttt{sdpt3} is used as a default solver) . Many commands of the Control toolbox of MATLAB are used as well.
 
@@ -74,18 +70,13 @@ Models can be parametric or nonparametric. The design method, in fact, needs the
 
 \subsection{Controllers}
 
-<<<<<<< HEAD
 The toolbox designs linearly parameterized controllers and SISO rational controllers.
 
 A linearly parameterized controller has the following form:
-=======
-The toolbox designs linearly parameterized controllers. A linearly parameterized controller has the following form:
->>>>>>> statespace
 \begin{equation}
 \label{linparcon}
 \rho^T \phi(s)=[\rho_1 \: \: \rho_2 \: \: \ldots \:\: \rho_n]\times [\phi_1(s) \: \: \phi_2(s) \:\: \ldots \:\: \phi_n(s)]^T
 \end{equation}
-<<<<<<< HEAD
 where $\rho_1$, $\rho_2$, $\ldots$, $\rho_n$ are controller parameters and $\phi_1(s)$, $\phi_2(s)$, $\ldots$, $\phi_n(s)$ are basis transfer functions. These transfer functions must be stable, i.e. with no right half plane poles.
 
 For SISO systems, a rational controller with the following form can be defined:
@@ -95,9 +86,6 @@ For SISO systems, a rational controller with the following form can be defined:
 \end{equation}
 
 $\phi$ is a vector of Laguerre or generalized basis functions, described below, and $f(s)$ is a fixed part of the controller. $\rho_x$ and $\rho_y$ are vectors of controller parameters.
-=======
-where $\rho_1$, $\rho_2$, $\ldots$, $\rho_n$ are controller parameters and $\phi_1(s)$, $\phi_2(s)$, $\ldots$, $\phi_n(s)$ are basis transfer functions. These transfer functions must be stable, i.e. with no right half plane poles. 
->>>>>>> statespace
 
 \subsubsection{PID, PI, PD:}
 
@@ -134,30 +122,6 @@ for continuous-time systems and
 for discrete-time systems,
 where $\xi_1, \ldots, \xi_n$ are complex numbers, $R_e$ denotes the real part of a complex number, and $\bar{\xi_k}$ is the complex conjugate of $\xi_k$.
 
-\subsubsection{State space:}
-A state space controller has the following form:
-
-\begin{equation}
-    K(s) = C \left(s I - A\right)^{-1} B + D
-\end{equation}
-for continuous-time systems and 
-
-\begin{equation}
-    K(z) = C \left(z I - A\right)^{-1} B + D
-\end{equation}
-for discrete-time systems.
-
-In the toolbox, the eigenvalues of the A matrix (equivalent to the poles of the system) and the B or C matrix are specified. $\rho$ represents the entries of the B or C matrix (whichever was not specified) and of the D matrix.
-
-<<<<<<< HEAD
-A state space representation of any of the previous controller types (PID, Laguerre etc.) is possible by setting the eigenvalues of the A matrix accordingly.
-
-
-
-
-=======
-A state space representation of any of the previous controller types (PID, Laguerre etc.) is possible by setting the eigenvalues of the A matrix accordingly. 
->>>>>>> statespace
 
 As stated earlier, one can define one's own vector of basis functions, $\phi$, of any desired order as well as the above listed types.
 
@@ -391,11 +355,7 @@ The procedure of design comprises three steps. First the type (or structure) of 
 \section{Determining controller structure}
 The first step of design is determining the desired controller type. By defining the controller type in fact the vector of basis transfer functions $\phi$ is specified. In the following command the controller type and subsequently the vector $\phi$ are specified by the user.
 \begin{lstlisting}
-<<<<<<< HEAD
 phi = conphi (ConType , ConPar , CorD , F, ConStruc) 
-=======
-phi = conphi (ConType , ConPar , CorD , F, ConStruc, ConOpt) 
->>>>>>> statespace
 \end{lstlisting}
 %\begin{table}
 %\centering
@@ -453,14 +413,8 @@ For continuous-time  Laguerre basis function, {\tt ConPar} is $[\xi \quad n]$ wh
 
 \item[\texttt{F}] is a transfer function by which the vector $\phi$ is multiplied. For example one can multiply a factor of integral $\frac{1}{s}$ to PID basis functions to get: $\phi=\frac{1}{s} \times [1\:\: \frac{1}{s} \:\: \frac{s}{1+\tau s}]^T$.
 
-<<<<<<< HEAD
 \item[\texttt{ConStruc}] is either \texttt{'LP'} for a linearly parameterized controller (default) or \texttt{'TF'} for a transfer function (rational) controller.
 
-=======
-\item[\texttt{ConStruc}] is either \texttt{'LP'} for a linearly parameterized controller (default) or \texttt{'SS'} for a state-space controller.
-
-\item[\texttt{ConOpt}] for a state space controller: is a cell containing a string \texttt{'B'} or \texttt{'C'} and the desired B or C matrix of the controller. By default, C = [1 0 0 0 ...].
->>>>>>> statespace
     
 
 \end{description}
@@ -569,7 +523,6 @@ Transfer function from input to output...
       s^2 + 2 s + 1
   \end{lstlisting}
 
-<<<<<<< HEAD
   \subsection{Example 6} A continuous-time 4th order Laguerre basis with $\xi=20$ in a transfer function structure, with an integrator (phi.fs is the inverse of the fixed part of the controller)
 
   \begin{lstlisting}
@@ -612,83 +565,6 @@ ans =
 Continuous-time transfer function.
 \end{lstlisting}
 
-=======
-  \subsection{Example 6} A continuous time PID controller defined in state space
-
-\begin{lstlisting}
-tau = 0.1;
-phi = conphi('PID',tau,'s',[],'SS');
-
-phi.phi
-
- 
-From input to output...
-    1
-1:  -
-    s
- 
-        1
-2:  --------
-     s (s+10)
- 
-3:  1
-
-
-phi.par.A
-
-         0    1.0000
-         0  -10.0000
-
-
-phi.par.C
-
-     1     0
-         
-\end{lstlisting}
-
-
-\subsection{Example 7} A discrete time Laguerre controller defined in state space with the B matrix given
-
-\begin{lstlisting}
-Ts = 0.02; n = 4;
-z = tf('z');
-
-phi = conphi('Laguerre',[Ts 0.1 n],'z',[],'SS',{'B',[1 0; 1 0; 0 1; 0 1]});
-
-
-phi
-
-	[1x1 struct]    [1x1 struct]
-
-    
-phi{1}.phi
-    
-  From input to output...
-       (z-0.2048) (z^2 - 0.1952z + 0.02002)
-   1:  ------------------------------------
-                    (z-0.1)^4
- 
-       (z+1) (z^2 - 0.4z + 0.06)
-   2:  -------------------------
-               (z-0.1)^4
- 
-       (z-0.4) (z+1)
-   3:  -------------
-         (z-0.1)^4
- 
-         (z+1)
-   4:  ---------
-       (z-0.1)^4
- 
-   5:  1
- 
-Sample time: 0.02 seconds
-Discrete-time zero/pole/gain model.
-
-\end{lstlisting}
-
-
->>>>>>> statespace
 After defining our desired controller structure, we shall proceed to the next step: specifying performance characteristics.
 
 
@@ -716,11 +592,7 @@ per = conper (PerType , par , Ld)
 %\end{table}
 
 \begin{description}
-<<<<<<< HEAD
 \item[\texttt{PerType}] is a string specifying the desired performance of the system. It can be \texttt{`GPhC'}, \texttt{`LS'} or \texttt{`Hinf'}. For rational controllers (with \texttt{`TF'} structure), only \texttt{`Hinf'} can be used.
-=======
-\item[\texttt{PerType}] is a string specifying the desired performance of the system. It can be \texttt{`GPhC'}, \texttt{`LS'} or \texttt{`Hinf'}. 
->>>>>>> statespace
 
 \begin{description}
 \item{\texttt{`GPhC'}} 
@@ -735,11 +607,7 @@ stands for the case when one wants to determine desired values for gain margin, 
 
 
 \item{\texttt{`Hinf'}} In this method the distance between $L=GK$ and $L_d$ is minimized under 
-<<<<<<< HEAD
-             some $H_\infty$ constraints on the weighted closed-loop sensitivity functions. For rational controllers, $L_d$ is not used $\gamma$ is minimized. 
-=======
-             some $H_\infty$ constraints on the weighted closed-loop sensitivity functions.
->>>>>>> statespace
+             some $H_\infty$ constraints on the weighted closed-loop sensitivity functions. For rational controllers, $L_d$ is not used when $\gamma$ is minimized. 
              
  \end{description}            
              
@@ -830,12 +698,8 @@ K = condes (G , phi , per , options)
 \end{lstlisting}
 
 \begin{description}
-<<<<<<< HEAD
 \item[\texttt{G}] is a cell, i. e., \texttt{G\{1\}}, \texttt{G\{2\}}, \dots, \texttt{G\{m\}} represent SISO or MIMO models $G_1$, $G_2$, $\ldots$, $G_m$. In case there is just one model, define it as \texttt{G\{1\}} or simply \texttt{G}.
     For a \texttt{`TF'} (transfer function/rational) controller structure, G can be given as a cell of cells where \texttt{N\{j\}=G\{j\}\{1\}} and \texttt{M\{j\}=G\{j\}\{2\}}. The j-th plant model is equal to \texttt{N\{j\} M\{j\}$^{-1}$}.
-=======
-\item[\texttt{G}] is a cell, i. e., \texttt{G\{1\}}, \texttt{G\{2\}}, \dots, \texttt{G\{m\}} represent SISO or MIMO models $G_1$, $G_2$, $\ldots$, $G_m$. In case there is just one model, define it as \texttt{G\{1\}} or simply \texttt{G}. 
->>>>>>> statespace
 Nonparametric models should be defined as an \texttt{frd} or  \texttt{idfrd} object (type \texttt{doc frd} to see details about creating or converting your model to an \texttt{frd} object).
 
 \item[\texttt{phi}] is the output of the first command. The command \texttt{condes} designs a controller of the specified type to meet the performance criteria implied by \texttt{per}. For MIMO systems \texttt{phi} is an $n_i \times n_o$ cell where $n_i$ is the number of inputs and $n_o$ is the number of outputs of the system. For example \texttt{phi\{p,q\}} is the vector of basis functions $\phi_{pq}$ for the element of row \texttt{p} and column \texttt{q} of the controller matrix $K$. So each element of the controller matrix may have a different vector of basis functions, or different structure. They should be defined separately by the first command, for example in a loop. Should you specify one controller type or structure for all the elements of the controller matrix, just simply enter one \texttt{phi} (not a cell) in the \texttt{condes} command. 
@@ -965,50 +829,6 @@ Zero/pole/gain from input 2 to output...
                s
 \end{lstlisting}
 
-<<<<<<< HEAD
-=======
-\subsubsection{Controller design in state space with {\tt LS} performance for a multivariable system}
-Consider the same MIMO model as in the previous example.
-The objective is to design a MIMO PID controller in state space to achieve the same performance as in the previous example (modulus margin of 0.5, open-loop transfer function of $\frac{1}{30s}$).
-
-\begin{lstlisting}
-s=tf('s');
-G=[5*exp(-3*s)/(4*s+1) 2.5*exp(-5*s)/(15*s+1); -4*exp(-6*s)/(20*s+1) exp(-4*s)/(5*s+1)];
-
-phi=conphi('pid',[],'s',[],'ss'); 
-per=conper('LS',0.5,1/(30*s)); 
-opts = condesopt('yalmip','off','gbands','off');
-
-K=condes(G,phi,per,opts)
-
-
-K =
- 
-  a = 
-           x1      x2
-   x1       0       1
-   x2       0  -8.333
- 
-  b = 
-             u1        u2
-   x1  -0.07789   -0.2858
-   x2    0.6801      2.37
- 
-  c = 
-       x1  x2
-   y1   1   0
-   y2   1   0
- 
-  d = 
-            u1       u2
-   y1  0.03529  0.01411
-   y2  0.03274   0.1328
- 
-Continuous-time state-space model.
-
-\end{lstlisting}
-
->>>>>>> statespace
 \subsubsection{Controller design with {\tt Hinf} performance}
 Consider the following system:
 $$G(z)=\frac{z-0.2}{z^3-1.2z^2+0.5z-0.1}$$
@@ -1038,7 +858,6 @@ K=condes(G,phi,per)
 
 \end{lstlisting}
 
-<<<<<<< HEAD
 
 \subsubsection{Rational controller design}
 Consider the following system:
@@ -1068,8 +887,6 @@ K = condes(G,phi,per,opts)
 \end{lstlisting}
 
 
-=======
->>>>>>> statespace
 \section{Controller design options}
 
 The controller design options are defined by the following command:
@@ -1133,7 +950,6 @@ parameters. The first one is described by a second-order polynomial and the seco
 of scheduling parameters and $m$ the number of operating points. The $i$-th row of {\tt gs} contains the values of $n$ scheduling
 parameters that corresponds to the $i$-th model $G_i$. The default value of \texttt{gs} is \texttt{[]}.
 
-<<<<<<< HEAD
 \item[\texttt{ntheta :}] This option is used for controllers with TF (transfer
 function) structure. It is an integer greater than 2 
 (default: 8) that determines the number of vertices used
@@ -1148,8 +964,6 @@ function) structure. It should be a small, positive number.
 The linear constraints are of the form Ax <= 0 and are 
 replaced by Ax <= TFtol. Default: 1e-7.
 
-=======
->>>>>>> statespace
  \item[{\tt yalmip :}]   is a string that can be set to {\tt `on'} to activate the YALMIP interface. It should be activated when  Gbands='on' for multivariable controller design of more than 2 inputs. It will be automatically activated if YALMIP has already been installed and {\tt nq} is empty. As  the default solver SDPT3 is used  but can be changed by 'solver' option, e.g. options=condesopt('yalmip','on','solver','sedumi').
 
 \item[\texttt{Solver options :}] Besides, the options mentioned above, one can alter every option available for different solvers. In this case, one should be aware of which solver would be used in which optimization problem. For example, if one wants to design a PID controller for a SISO system without specifying a desired open loop (where optimization problem (\ref{eq:opGPhC}) is solved by \texttt{linprog}), one can change every option available for the solver \texttt{linprog} in this command. For example:
@@ -1544,7 +1358,6 @@ Disturbance response of the 6-th order controller
 
 \bibliographystyle{plain}
 \bibliography{/Users/akarimi/Documents/Karimi/papers/bibfiles/linear}
-<<<<<<< HEAD
 \end{document}
 
 
@@ -1552,6 +1365,3 @@ Disturbance response of the 6-th order controller
 %%% mode: latex
 %%% TeX-master: t
 %%% End:
-=======
-\end{document}
->>>>>>> statespace
